samples/_failures_safe/1761538827_c13252_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d23eea3d.c: In function ‘main’:
./samples/SAFE/__tmp_d23eea3d.c:152:21: error: expected declaration or statement at end of input
  152 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_d23eea3d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d23eea3d.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d23eea3d.c:152:21: error: expected declaration or statement at end of input
